<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.lg5.spring</groupId>
        <artifactId>lg5-spring-parent</artifactId>
        <version>1.0.0-alpha.2a0e4d9</version>
        <relativePath/>
    </parent>

    <groupId>com.labs.lg.food.ordering.system</groupId>
    <artifactId>food-ordering-system</artifactId>
    <version>1.0.0-alpha</version>
    <packaging>pom</packaging>
    <modules>
        <module>order-service</module>
        <module>infrastructure</module>
        <module>customer-service</module>
        <module>restaurant-service</module>
        <module>payment-service</module>
    </modules>
    <dependencies>

    </dependencies>
    <dependencyManagement>
        <dependencies>
            <!--customer service -->
            <dependency>
                <groupId>com.labs.lg.food.ordering.system</groupId>
                <artifactId>customer-domain-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.labs.lg.food.ordering.system</groupId>
                <artifactId>customer-application-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.labs.lg.food.ordering.system</groupId>
                <artifactId>customer-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.labs.lg.food.ordering.system</groupId>
                <artifactId>customer-data-access</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.labs.lg.food.ordering.system</groupId>
                <artifactId>customer-message-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.labs.lg.food.ordering.system</groupId>
                <artifactId>customer-message-model</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!--order service -->
            <dependency>
                <groupId>com.labs.lg.food.ordering.system</groupId>
                <artifactId>order-domain-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.labs.lg.food.ordering.system</groupId>
                <artifactId>order-application-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.labs.lg.food.ordering.system</groupId>
                <artifactId>order-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.labs.lg.food.ordering.system</groupId>
                <artifactId>order-data-access</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.labs.lg.food.ordering.system</groupId>
                <artifactId>order-message-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.labs.lg.food.ordering.system</groupId>
                <artifactId>order-message-model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!--payment service -->
            <dependency>
                <groupId>com.labs.lg.food.ordering.system</groupId>
                <artifactId>payment-domain-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.labs.lg.food.ordering.system</groupId>
                <artifactId>payment-application-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.labs.lg.food.ordering.system</groupId>
                <artifactId>payment-data-access</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.labs.lg.food.ordering.system</groupId>
                <artifactId>payment-message-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.labs.lg.food.ordering.system</groupId>
                <artifactId>payment-message-model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!--restaurant service -->
            <dependency>
                <groupId>com.labs.lg.food.ordering.system</groupId>
                <artifactId>restaurant-domain-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.labs.lg.food.ordering.system</groupId>
                <artifactId>restaurant-application-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.labs.lg.food.ordering.system</groupId>
                <artifactId>restaurant-data-access</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.labs.lg.food.ordering.system</groupId>
                <artifactId>restaurant-message-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.labs.lg.food.ordering.system</groupId>
                <artifactId>restaurant-message-model</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>